--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.16.7",
     "react": "^18.3.1",
     "react-confetti-explosion": "^2.1.2",
-    "react-custom-roulette": "^1.4.1",
+    "react-custom-roulette": "1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "uuid": "^10.0.0"
